Fix: mobile view overflow, Feat: gitignore add

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -602,6 +602,7 @@ body {
   color: #f36c25;
   z-index: 100;
   opacity: 10;
+  max-width:320px;
 }
 
 .divisions-bg {
@@ -614,6 +615,7 @@ body {
   opacity: 0.08;
   font-weight: 500;
   color: #f2f2f2;
+  max-width:320px;
 }
 
 .divisions-line {
